snapshots/syntax/library/statements/stop/stop_at_module_level.snap
---
source: src/syntax/library/statements/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
        - kind: Newline
          text: "\n"
